Fix line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -27,17 +27,19 @@ article p {
 }
 
 article h1 {
+  font-size: 1.5rem;
   font-weight: normal;
-  padding-bottom: .1em;
-  margin-bottom: .1em;
+  margin: 0;
+  padding-top: 1em;
 }
 
 article header p {
   font-style: italic;
   color: #555;
-  border-bottom: 2px solid #999;
+  border-bottom: .5px solid #999;
   padding-top: 0;
   padding-bottom: 1.3em;
+  line-height: 10px;
 }
 
 blockquote {
